# WorldToScreenTesting

./: .gitignore  CMakeLists.txt  CMakePresets.json  CombatLogInfo.txt  NavigatorGuide.md  README.md  WorldToScreen.txt  dllmain.cpp
TrinityCore-3.3.5/src/common/Collision/: DynamicTree.cpp
TrinityCore-3.3.5/src/common/Metric/: Metric.h
TrinityCore-3.3.5/src/tools/mmaps_generator/: MapBuilder.cpp
core/: Logger.h  TrinityStubs.cpp  drawing.cpp  drawing.h  hook.cpp  hook.h  player.cpp  types.h  worldtoscreen.cpp  worldtoscreen.h
core/combat/: CombatLogAnalyzer.cpp  CombatLogAnalyzer.h  CombatLogEntry.h  CombatLogManager.cpp  CombatLogManager.h
core/drawing/: drawing.cpp  drawing.h
core/drawing/components/: LineManager.cpp  LineManager.h  LineOfSightManager.cpp  LineOfSightManager.h  MarkerManager.cpp  MarkerManager.h  ObjectOverlay.cpp  ObjectOverlay.h  PlayerTracker.cpp  PlayerTracker.h  RenderEngine.cpp  RenderEngine.h  TextureManager.cpp  TextureManager.h  WorldToScreenCore.cpp  WorldToScreenCore.h
core/gui/: GUI.cpp  GUI.h
core/gui/tabs/: CombatLogTab.cpp  CombatLogTab.h  DrawingTab.cpp  DrawingTab.h  MovementTab.cpp  MovementTab.h  NavigationTab.cpp  NavigationTab.h  ObjectsTab.cpp  ObjectsTab.h
core/logs/: Logger.cpp  Logger.h
core/memory/: memory.cpp  memory.h
core/movement/: MovementController.cpp  MovementController.h
core/navigation/: MapHeightManager.cpp  MapHeightManager.h  NavigationManager.cpp  NavigationManager.h  NavigationTypes.h  VMapManager.cpp  VMapManager.h
core/objects/: ObjectManager.cpp  ObjectManager.h  WowGameObject.cpp  WowGameObject.h  WowObject.cpp  WowObject.h  WowPlayer.cpp  WowPlayer.h  WowUnit.cpp  WowUnit.h
core/types/: types.cpp  types.h
